--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,8 @@
 
     <img width=100% src="http://theodorelindsey.io/assets/theodore.jpg" />
 
+<div class="sidebar">
+
     <b>Theodore S. Lindsey</b>
 
     <hr>
@@ -59,4 +61,5 @@
         {% endfor %}
         </ul>
     </div>
+</div>
 </div>
