fixed cv/resume links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,10 +26,10 @@
             <a href="/contact.html">Contact</a></li>
             
         <li>
-            <a href="">Resume</a></li>
+            <a href="/assets/Theodore_Lindsey_Resume.pdf">Resume</a></li>
             
         <li>
-            <a href="">CV</a></li>
+            <a href="/assets/Theodore_Lindsey_CV.pdf">CV</a></li>
         </ul>
     </div>
     
