Added post: LED bulbs.  Added rss icons.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
             <a href="/teaching/">Teaching</a></li>
             
         <li {% if page.section == "Blog" %}id="active_nav"{% endif %}>
-            <a href="/blog/">Blog</a></li>
+            <a href="/blog/">Blog</a> <!--<a href="/blog/feed.xml"><img style="width: 16px" src="/assets/icons/rss-32.png" alt="rss feed" /></a>--></li>
             
         <li  {% if page.section == "Contact" %}id="active_nav"{% endif %}>
             <a href="/contact.html">Contact</a></li>
