--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,8 +22,8 @@
         <li {% if page.section == "Blog" %}id="active_nav"{% endif %}>
             <a href="/blog/">Blog</a> <!--<a href="/blog/feed.xml"><img style="width: 16px" src="/assets/icons/rss-32.png" alt="rss feed" /></a>--></li>
             
-        <li {% if page.section == "Projects" %}id="active_nav"{% endif %}>
-            <a href="/projects/">Simple Projects</a>
+        <li {% if page.section == "Utilities" %}id="active_nav"{% endif %}>
+            <a href="/Utilities/">Utilities</a>
             
         <li  {% if page.section == "Contact" %}id="active_nav"{% endif %}>
             <a href="/contact.html">Contact</a></li>
