--- a/utilities/Set/style/master.css
+++ b/utilities/Set/style/master.css
@@ -18,17 +18,23 @@ html, body {
 #div_setup, #div_rules {
     display: none;
 }
-#div_rulesContent, #status {
+#div_rulesContent, #p_status {
     padding: 1em;
     margin: 0;
 }
 #div_board {
-    width: 100%;
-    height: 95%;
+    width: 100vw;
+    height: 95vh;
+    position: absolute;
+    top: 5%;
+    display: block;
 }
 #div_status {
-    width: 100%;
-    height: 5%;
+    width: 100vw;
+    height: 5vh;
+    position: absolute;
+    top: 0;
+    display: block;
 }
 
 #players {
@@ -36,4 +42,10 @@ html, body {
     left: 30vw;
     top: 10vw;
     width: 40vw;
+}
+
+.card {
+    position: absolute;
+    z-index: 1;
+    opacity: 0.0;
 }
