--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar_wrapper">
 
-    <img width=100% src="http://theodorelindsey.io/assets/theodore.jpg" />
+    <img width=100% src="https://theodorelindsey.io/assets/theodore.jpg" />
 
 <div class="sidebar">
 
