--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,34 +1,23 @@
-<div id="nav">
-    <table>
-       <tr>
-        <td {% if page.section == "Home" %}id="active_nav"{% endif %}>
-            <a href="/">Home</a>
-        </td>
-            
-        <td {% if page.section == "Academics" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/academics.html">Academics</a>
-        </td>
-            
-        <td {% if page.section == "Teaching" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/teaching/">Teaching</a>
-        </td>
-            
-        <td {% if page.section == "Blog" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/blog/">Blog</a>
-        </td>
-        
-        <td {% if page.section == "Contact" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/contact.html">Contact</a>
-        </td>
-            
-        <td>
-            <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a>
-        </td>
-            
-        <td>
-            <a href="/assets/Theodore_Lindsey_CV.pdf" target="_blank">CV</a>
-        </td>
-            
-        </tr>
-    </table>
-</div> <!--right container-->
+<nav>
+  <ul>
+    <li {% if page.section == "Home" %}class="active_nav"{% endif %}>
+      <a href="/">Home</a>
+    </li>
+
+    <li {% if page.section == "Bio" %}class="active_nav"{% endif %}>
+      <a href="{{site.baseurl}}/bio/">Bio</a>
+    </li>
+
+    <li {% if page.section == "Blog" %}class="active_nav"{% endif %}>
+      <a href="{{site.baseurl}}/blog/">Blog</a>
+    </li>
+
+    <li {% if page.section == "Applications" %}class="active_nav"{% endif %}>
+        <a href="/apps/">Applications</a>
+    </li>
+
+    <li>
+      <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a>
+    </li>
+  </ul>
+</nav> <!--right container-->
