--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
-
-<div id="footer_padding">
-    <div id="footer">
+<footer>
+    {% if page.title != "Blog Posts" %}
         <!--#config timefmt="%B %d, %Y" -->
-        Last modified: <!--#echo var="LAST_MODIFIED"--> {{ page.date }}
-    </div>
-</div>
+        Last modified: <!--#echo var="LAST_MODIFIED"--> {{ page.last_modified_at }}
+    {% endif %}
+</footer>
