Update for nav links, apps

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul>
+  <ul class="page_links">
     <li {% if page.section == "Home" %}class="active_nav"{% endif %}>
       <a href="/">Home</a>
     </li>
@@ -19,5 +19,12 @@
     <li>
       <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a>
     </li>
+  </ul>
+
+  <ul class="profile_links">
+    <li><a href="https://www.linkedin.com/in/theodorelindsey/"><img src="/assets/icons/linkedin-24.png" /></a></li>
+    <li><a href="https://github.com/RagingRoosevelt/"><img src="/assets/icons/github-24.png" /></a></li>
+    <li><a href="https://twitter.com/RagingRoosevelt/"><img src="/assets/icons/twitter-24.png" /></a></li>
+    <li><a href="https://steamcommunity.com/id/RagingRoosevelt/"><img src="/assets/icons/steam-24.png" /></a></li>
   </ul>
 </nav> <!--right container-->
