--- a/_layouts/default3.html
+++ b/_layouts/default3.html
@@ -7,7 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ "/css/pico.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/default3.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/nav.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/default.css" | prepend: site.baseurl }}">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
