Updated website style setup, updated links to apps, added employment page, added docker dev env

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
     </li>
 
     <li {% if page.section == "Applications" %}class="active_nav"{% endif %}>
-        <a href="/apps/">Applications</a>
+        <a href="/apps/">Applets</a>
     </li>
 
     <li>
@@ -22,9 +22,9 @@
   </ul>
 
   <ul class="profile_links">
-    <li><a href="https://www.linkedin.com/in/theodorelindsey/"><img src="/assets/icons/linkedin-24.png" /></a></li>
-    <li><a href="https://github.com/RagingRoosevelt/"><img src="/assets/icons/github-24.png" /></a></li>
-    <li><a href="https://twitter.com/RagingRoosevelt/"><img src="/assets/icons/twitter-24.png" /></a></li>
-    <li><a href="https://steamcommunity.com/id/RagingRoosevelt/"><img src="/assets/icons/steam-24.png" /></a></li>
+    <li><a href="https://www.linkedin.com/in/theodorelindsey/" target="_blank"><img src="/assets/icons/linkedin-24.png" /></a></li>
+    <li><a href="https://github.com/RagingRoosevelt/" target="_blank"><img src="/assets/icons/github-24.png" /></a></li>
+    <li><a href="https://twitter.com/RagingRoosevelt/" target="_blank"><img src="/assets/icons/twitter-24.png" /></a></li>
+    <li><a href="https://steamcommunity.com/id/RagingRoosevelt/" target="_blank"><img src="/assets/icons/steam-24.png" /></a></li>
   </ul>
 </nav> <!--right container-->
