Added accessability labels in a few links

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -29,7 +29,7 @@ layout: base
     </li>
 
     <li>
-      <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a>
+      <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank" aria-label="PDF Resume (opens in a new tab)">Resume</a>
     </li>
   </ul>
 </nav>
