Add skip link for accessibility

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 ---
+<a href="#main-content" class="skip-link">Skip to main content</a>
 
 <header>
   <div class="img-profile">
@@ -35,7 +36,7 @@ layout: base
 </nav>
 
 
-<main>
+<main id="main-content">
   {{ content }}
 </main>
 
