Fix tags and categories, add search, update accessability on blog pagination

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,9 +10,9 @@
     {% if 1==0 %}<link rel="stylesheet" href="{{ "/css/pico_v2.0.6.classless.purple.min.css" | prepend: site.baseurl }}">{% endif %}
     <link rel="stylesheet" href="{{ "/css/layout_default.css" | prepend: site.baseurl }}">
   {% endif %}
-  {% if page.extra_css %}
-    <link rel="stylesheet" href="{{ site.baseurl | append: "/css/" | append: page.extra_css }}">
-  {% endif %}
+  {% for css_file in page.extra_css %}
+    <link rel="stylesheet" href="{{ site.baseurl | append: "/css/" | append: css_file }}">
+  {% endfor %}
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
@@ -26,6 +26,7 @@
   <link rel="icon" type="image/png" href="/favicon.png">
 
   {% include google_analytics.html %}
+  {% seo %}
 </head>
 <body data-theme="light">
 {{ content }}
