--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -13,5 +13,10 @@ layout: main
 
 Categories:
 {% for category in page.categories %}
-    <a href="">{{category}}</a>,
+    <a href="{{site.baseurl}}/blog/categories.html#{{category|slugize}}">{{category}}</a>,
+{% endfor %}
+
+Tags:
+{% for tag in page.tags %}
+    <a href="{{site.baseurl}}/blog/tags.html#{{tag|slugize}}">{{tag}}</a>,
 {% endfor %}
