Improve layout, clean up theme, add theme demo page, fix quadratic app

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,5 +30,9 @@
 </head>
 <body data-theme="light">
 {{ content }}
+<script>
+    const all = document.querySelectorAll.bind(document)
+    const one = document.querySelector.bind(document)
+</script>
 </body>
 </html>
